// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookShareButton renders 1`] = `
.c0 {
  color: blue;
}

.c3 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
}

.c3:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c3:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c2 {
  font-size: 16px;
  background-color: #3b5998;
}

.c1 {
  text-transform: none;
}

.c1:hover {
  -webkit-filter: brightness(90%);
  filter: brightness(90%);
  background-color: #3b5998;
}

.c1:active {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  -webkit-filter: brightness(85%);
  filter: brightness(85%);
  background-color: #3b5998;
}

.c4 {
  padding-left: 8px;
}

<FacebookShareButton
  fontSize={2}
  url=""
>
  <ForwardRef
    color="blue"
    href="https://www.facebook.com/sharer/sharer.php?&u="
    is="a"
  >
    <ForwardRef
      className="c0"
      color="blue"
      href="https://www.facebook.com/sharer/sharer.php?&u="
      is="a"
    >
      <a
        className="c0"
        href="https://www.facebook.com/sharer/sharer.php?&u="
      >
        <ShareButton__StyledShareButton
          bg="#3b5998"
        >
          <Button
            bg="#3b5998"
            border={2}
            className="c1"
            fontSize={1}
            hollow={false}
            inverted={false}
          >
            <Button__StyledButton
              bg="#3b5998"
              border={2}
              className="c1 c2"
              fontSize={1}
              hollow={false}
              inverted={false}
            >
              <button
                className="c1 c2 c3"
                fontSize={1}
              >
                <FaFacebook>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m29.4 0.3v5.9h-3.5q-1.9 0-2.6 0.8t-0.7 2.4v4.2h6.6l-0.9 6.6h-5.7v16.9h-6.8v-16.9h-5.7v-6.6h5.7v-4.9q0-4.1 2.3-6.4t6.2-2.3q3.3 0 5.1 0.3z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </FaFacebook>
                <ShareButton__StyledText
                  pl={2}
                >
                  <span
                    className="c4"
                  >
                    Share
                  </span>
                </ShareButton__StyledText>
              </button>
            </Button__StyledButton>
          </Button>
        </ShareButton__StyledShareButton>
      </a>
    </ForwardRef>
  </ForwardRef>
</FacebookShareButton>
`;

exports[`TwitterShareButton renders 1`] = `
.c0 {
  color: blue;
}

.c3 {
  border-radius: 32px;
  display: inline-block;
  height: 40px;
  line-height: 1;
  padding-left: 32px;
  padding-right: 32px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
}

.c3:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c3:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c2 {
  font-size: 16px;
  background-color: #1DA1F2;
}

.c1 {
  text-transform: none;
}

.c1:hover {
  -webkit-filter: brightness(90%);
  filter: brightness(90%);
  background-color: #1DA1F2;
}

.c1:active {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  -webkit-filter: brightness(85%);
  filter: brightness(85%);
  background-color: #1DA1F2;
}

.c4 {
  padding-left: 8px;
}

<TwitterShareButton
  fontSize={2}
  hashtags=""
  inReplyTo=""
  message=""
  url=""
  via=""
>
  <ForwardRef
    color="blue"
    href="https://twitter.com/intent/tweet?text="
    is="a"
  >
    <ForwardRef
      className="c0"
      color="blue"
      href="https://twitter.com/intent/tweet?text="
      is="a"
    >
      <a
        className="c0"
        href="https://twitter.com/intent/tweet?text="
      >
        <ShareButton__StyledShareButton
          bg="#1DA1F2"
        >
          <Button
            bg="#1DA1F2"
            border={2}
            className="c1"
            fontSize={1}
            hollow={false}
            inverted={false}
          >
            <Button__StyledButton
              bg="#1DA1F2"
              border={2}
              className="c1 c2"
              fontSize={1}
              hollow={false}
              inverted={false}
            >
              <button
                className="c1 c2 c3"
                fontSize={1}
              >
                <FaTwitter>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m37.7 9.1q-1.5 2.2-3.7 3.7 0.1 0.3 0.1 1 0 2.9-0.9 5.8t-2.6 5.5-4.1 4.7-5.7 3.3-7.2 1.2q-6.1 0-11.1-3.3 0.8 0.1 1.7 0.1 5 0 9-3-2.4-0.1-4.2-1.5t-2.6-3.5q0.8 0.1 1.4 0.1 1 0 1.9-0.3-2.5-0.5-4.1-2.5t-1.7-4.6v0q1.5 0.8 3.3 0.9-1.5-1-2.4-2.6t-0.8-3.4q0-2 0.9-3.7 2.7 3.4 6.6 5.4t8.3 2.2q-0.2-0.9-0.2-1.7 0-3 2.1-5.1t5.1-2.1q3.2 0 5.3 2.3 2.4-0.5 4.6-1.7-0.8 2.5-3.2 3.9 2.1-0.2 4.2-1.1z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </FaTwitter>
                <ShareButton__StyledText
                  pl={2}
                >
                  <span
                    className="c4"
                  >
                    Tweet
                  </span>
                </ShareButton__StyledText>
              </button>
            </Button__StyledButton>
          </Button>
        </ShareButton__StyledShareButton>
      </a>
    </ForwardRef>
  </ForwardRef>
</TwitterShareButton>
`;
